templates/tpl_modified_nova/stylesheet.css
/* ... */
/* 21. END subfooter newsletter */


/* 22. START footer, copyright, parse time */
.layout_footer {
  background: var(--footer_bg, #eee);
  margin: 0;
  padding: 60px 0 20px 0;
}
.footer_row {
  display: flex; 
  flex-wrap:wrap;
  margin: 0px auto;
  max-width:400px;  
}
@media only screen and (min-width: 600px) {
  .footer_row { margin: 0px auto; max-width:700px; }
}
@media only screen and (min-width: 985px) {
  .footer_row { margin: 0px -20px; max-width:initial; }
}

.footer_item {
  width:100%;
  padding: 0px 20px;
  margin: 0 0 30px 0;
}
@media only screen and (min-width: 600px) {
  .footer_item { width:50%; }
}
@media only screen and (min-width: 985px) {
  .footer_item { width:25%; }
}

.footer_item .content_box {
  margin: 0 0 0 0; 
}
.footer_item .content_box_header {
  color: var(--footer_box_header, #555);
  font-size:14px;
  line-height:20px;
  font-weight:700;
  margin: 0 0 10px 0;
}
.footer_item ul.content_box_list  {
  margin: 0 0 0 0;
  list-style-type:none;
  padding: 0px;
}
.footer_item ul.content_box_list ul {
  display:none;
}
.footer_item ul.content_box_list li {
  padding: 6px 0px 6px 0px; 
  font-size:13px;
  line-height:17px;
}

.footer_item ul.content_box_list li a {
  padding: 0 0 0 0px;
  display:block;
  color: var(--footer_link_color, #333);
  font-size:13px;
  line-height:17px;
  position:relative;
}
.footer_item ul.content_box_list li a:hover {
  text-decoration:none;
}
.footer_item ul.content_box_list li a span {
  color: var(--footer_link_color, #333);
  transition: all 0.3s ease-in-out;
  border-bottom: 1px solid transparent;
}
.footer_item ul.content_box_list li a:hover span {
  color: var(--footer_link_color, #333);
  border-bottom: 1px solid var(--footer_link_color_underline, #999);
}

.footer_item .content_box_text {
  padding: 3px 0px 7px 0px;
  display:block;
  font-size:13px;
  line-height:21px;
  color: var(--footer_box_text, #333);
}

.content_box_payment {
  padding: 8px 0px;
}
.content_box_payment > span {
  float:left;
  width:54px;
  border-radius:4px;
  background: var(--footer_payment_icons_bg, rgba(255,255,255,0.0));
  margin: 0px 10px 10px 0px;
}
.content_box_payment > span img {
  width:100%;
  height:auto;
  vertical-align:top;
  opacity:0.8;
  filter: grayscale(100%);
}
.content_box_payment > span:hover img {
  opacity:1.0;
  filter: grayscale(0%);
}

.content_box_social {
  padding: 8px 0px;
}
.content_box_social a {
  display:inline-block;
  font-size:24px;
  line-height:24px;
  margin: 0 10px 10px 0;
  vertical-align:top;
  color: var(--footer_social_icons, #666);
}
.content_box_social a:hover {
  color: var(--footer_social_icons_hover, #333);
}

.mod_copyright {
  padding: 20px 0px 30px 0px;
  font-size:11px;
  line-height:17px;
  font-weight:400;
  text-align:center;
  color: var(--footer_copyright, #666);
}
.mod_copyright a,
.mod_copyright a:hover {
  color: var(--footer_copyright, #666);
  text-decoration:none;
  border-bottom: 1px solid var(--footer_copyright_border, #999);
}
.copyright {
  margin:0 auto;
  text-align:center;
  color: var(--footer_copyright, #666);
  font-size:11px;
  line-height:17px;
  font-weight:400;
  padding:0 0 10px 0;
  margin: -51px 0 0 0;
  width:100%;
}
.copyright a {
  color: var(--footer_copyright, #666);
  text-decoration:none;
}
/* ParseTime */
.parseTime {
  margin:0 auto;
  text-align:center;
  color: var(--footer_copyright, #333);
  font-weight:700;
  font-size:10px;
  margin: -12px 0 0 0;
}
/* 22. END footer, copyright, parse time */


/* 23. START postions for CSS Buttons */
.button_row {
  margin: 15px -5px 0px -5px;
  display: flex;
  flex-wrap: wrap;
  flex-direction:column;
}
@media only screen and (min-width: 520px) {
  .button_row { flex-direction:row; }
}

.button_row > .br_left {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  justify-content: flex-start;
}
.button_row > .br_right {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  justify-content: flex-end;
}
.button_row a:hover {
  text-decoration:none;
}
.br_btn_0 {
  padding:5px;
  width:100%;  
}
.br_btn_1 {
  padding:5px;
  min-width:100%;  
}
@media only screen and (min-width: 520px) {
  .br_btn_1 { min-width:250px; }
}

.br_btn_checkout {
  padding:5px;
  width:100%;  
  max-width:480px;
}
.br_btn_checkout .apms_form_inner {
  max-width:480px;
  width:100% !important;
}
.br_btn_checkout .apms_form_button {
  min-width: 100% !important;
  max-width:480px !important;
}
.br_btn_checkout .apms_form_button_inner {
  min-height: 44px !important;
}

.br_btn_alternate {
  display:block;
  width:100%;
  text-align:center;
  height:20px;    
  position:relative;
}
.br_btn_alternate:before {
  content: '';
  display:block;
  height:1px;
  border-top:1px solid #d9d9d9;
  position:absolute;
  top:1px;
  left:10%;  
  right:10%;
  bottom: 0px;
  margin: auto;
}
.br_btn_alternate span {
  position:relative;
  z-index:1;
  display:inline-block;
  vertical-align:top;
  background:#fff;
  font-size:10px;
  line-height:20px;  
  font-weight:400;
  color:#666;
  padding: 0px 10px;
  text-transform:uppercase;
}
/* 23. END postions for CSS Buttons */


/* 24. START CSS Buttons */
/* Globals for CSS Buttons */
.cssButton {
  position:relative;
  font-family: 'Red Hat Display', sans-serif;
  display:flex;
  align-items:center;
  justify-content:center;
  width:100%;
  padding: 9px 5px;
  font-weight:900;
  text-transform:none;
  white-space:nowrap;
  text-decoration:none;
  min-height:44px;
  border-radius:4px;
  transition: all 0.3s ease-in-out;
}
.cssButtonText {
  font-size:13px;
  line-height:24px;
  text-transform:uppercase;
  vertical-align:top;
  padding: 0px 3px;
}
.cssButtonIcon {
  font-size:13px;
  line-height:24px;
  vertical-align:top;
  padding: 0px 3px;
}
.cssButtonIcon .far,
.cssButtonIcon .fas,
.cssButtonIcon .fa-solid,
.cssButtonIcon .fa-regular {
  vertical-align:top;
  line-height:24px;
}
/* ... */

